syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (AuthTokensResponse);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
  rpc Refresh (RefreshRequest) returns (AuthTokensResponse);
  rpc Register (RegistrerRequest) returns (google.protobuf.Empty);
  rpc ConfirmRegister (ConfirmRegisterRequest) returns (google.protobuf.Empty);
  rpc ResendRegisterConfirmationMail (ResendRegisterConfirmationMailRequest) returns (google.protobuf.Empty);
}

message UserMetadata {
  string ip = 1;
  string userAgent = 2;
}

message AuthTokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  UserMetadata userMetadata = 3;
}

message LogoutRequest {
  string refreshToken = 1;
}

message RefreshRequest {
  string refreshToken = 1;
  UserMetadata userMetadata = 2;
}

message RegistrerRequest {
  string email = 1;
  string password = 2;
}

message ConfirmRegisterRequest {
  string confirmationLink = 1;
}

message ResendRegisterConfirmationMailRequest {
  string email = 1;
}